--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 }
 
 body {
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 550px;
     border: 1px solid white;
     box-shadow: 1px 1px 10px black;
     margin: auto;
@@ -44,6 +44,7 @@ body {
     margin: auto;
     text-align: center;
     padding: 30px;
+    margin-top: 20px;
 }
 
 #pastas>a {
