--- a/style.css
+++ b/style.css
@@ -29,22 +29,18 @@ body {
     text-align: center;
     margin: auto;
     margin-top: 180px;
-}
-
-#conteudo>#titulo h1:hover{
-    text-shadow: 1px 1px 10px green;
+    margin-bottom: 30px;
 }
 
 #conteudo>#pastas {
-    width: 300px;
-    height: 300px;
+    width: 220px;
     display: inline;
     display: flex;
     flex-direction: column;
     margin: auto;
     text-align: center;
-    padding: 30px;
-    margin-top: 20px;
+    padding: 5px;
+    margin-top: 10px;
 }
 
 #pastas>a {
@@ -61,3 +57,5 @@ body {
     background-color: lightgreen;
     font-size: 18px;
 }
+
+
