--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+html{
+    background-color: lightseagreen;
+}
 body {
     width: 300px;
     height: 550px;
@@ -14,7 +16,6 @@ body {
     box-shadow: 1px 1px 10px black;
     margin: auto;
     margin-top: 80px;
-    background-color: white;
 }
 
 #conteudo {
@@ -23,12 +24,17 @@ body {
     flex-direction: column;
 }
 
+#conteudo .img01{
+    width: 300px;
+    height: 550px;
+}
+
 #conteudo>#titulo h1 {
     color:black;
     font-size: 25px;
     text-align: center;
     margin: auto;
-    margin-top: 180px;
+    margin-top: -480px;
     margin-bottom: 30px;
 }
 
@@ -39,8 +45,8 @@ body {
     flex-direction: column;
     margin: auto;
     text-align: center;
-    padding: 5px;
-    margin-top: 10px;
+    padding: 60px;
+    margin-top: -290px;
 }
 
 #pastas>a {
@@ -54,8 +60,8 @@ body {
 }
 
 #pastas>a:hover {
-    background-color: lightgreen;
-    font-size: 18px;
+    background-color: lightseagreen;
+    font-size: 16px;
 }
 
 
